exports[`EventsComponent Check it renders when not loaded 1`] = `
<Layout
  breadcrumb={
    <function Breadcrumb() {_classCallCheck(this, Breadcrumb);return _possibleConstructorReturn(this, (Breadcrumb.__proto__ || Object.getPrototypeOf(Breadcrumb)).apply(this, arguments));}
      allActive={true}
      node={undefined}
      onClickCrumb={[Function onClickCrumb]} />
  }
  content={
    <span>
      loader
    </span>
  }
  leftMenu={
    <div
      style={
        Object {
          "paddingTop": 10
        }
      }>
      <function ObservationControlComponent() {_classCallCheck(this, ObservationControlComponent);return _possibleConstructorReturn(this, (ObservationControlComponent.__proto__ || Object.getPrototypeOf(ObservationControlComponent)).apply(this, arguments));}
        id="1"
        onClickNewControl={[Function onClickNewControl]}
        onClickNewObservation={[Function onClickNewObservation]}
        selectControl={true}
        selectObservation={true} />
    </div>
  }
  title="Storage facility"
  toolbar={
    <function Toolbar() {_classCallCheck(this, Toolbar);return _possibleConstructorReturn(this, (Toolbar.__proto__ || Object.getPrototypeOf(Toolbar)).apply(this, arguments));}
      clickShowLeft={[Function clickShowLeft]}
      clickShowRight={[Function clickShowRight]}
      labelLeft="Observations"
      labelRight="Controls"
      placeHolderSearch="Filter the list"
      showLeft={true}
      showRight={true} />
  } />
`;

exports[`EventsComponent Check it renders. 1`] = `
<Layout
  breadcrumb={
    <function Breadcrumb() {_classCallCheck(this, Breadcrumb);return _possibleConstructorReturn(this, (Breadcrumb.__proto__ || Object.getPrototypeOf(Breadcrumb)).apply(this, arguments));}
      allActive={true}
      node={undefined}
      onClickCrumb={[Function onClickCrumb]} />
  }
  content={
    <div
      style={
        Object {
          "color": "grey",
          "textAlign": "center"
        }
      }>
      No controls or observations
    </div>
  }
  leftMenu={
    <div
      style={
        Object {
          "paddingTop": 10
        }
      }>
      <function ObservationControlComponent() {_classCallCheck(this, ObservationControlComponent);return _possibleConstructorReturn(this, (ObservationControlComponent.__proto__ || Object.getPrototypeOf(ObservationControlComponent)).apply(this, arguments));}
        id="1"
        onClickNewControl={[Function onClickNewControl]}
        onClickNewObservation={[Function onClickNewObservation]}
        selectControl={true}
        selectObservation={true} />
    </div>
  }
  title="Storage facility"
  toolbar={
    <function Toolbar() {_classCallCheck(this, Toolbar);return _possibleConstructorReturn(this, (Toolbar.__proto__ || Object.getPrototypeOf(Toolbar)).apply(this, arguments));}
      clickShowLeft={[Function clickShowLeft]}
      clickShowRight={[Function clickShowRight]}
      labelLeft="Observations"
      labelRight="Controls"
      placeHolderSearch="Filter the list"
      showLeft={true}
      showRight={true} />
  } />
`;
